Add styles for splash

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;600&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
-    <link rel="stylesheet" href="sass/style.scss">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Zadanie 3.7.</title>
 </head>
     <header class="splash">
         <nav class="navigation">
-            <h2 class="nav-title">Alecto.</h2>
+            <h2 class="nav-title">Alecto<span>.</span></h2>
             <div class="container">
                 <ul>
                     <li><a href="#">HOME</a></li>
@@ -23,7 +26,7 @@
             </div>
         </nav>
         <div class="splash-inner">
-            <h1 class="splash-title">Alecto is simple PSD Template</h1>
+            <h1 class="splash-title"><span>Alecto</span> is simple PSD Template</h1>
             <h3 class="splash-subtitle">Nullam aliquet nunc vitae</h3>
             <button class="btn-1">Learn more</button>
         </div>
