Add section about html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <title>Zadanie 3.7.</title>
 </head>
+<body>
     <header class="splash">
         <nav class="navigation">
             <h2 class="nav-title">Alecto<span>.</span></h2>
@@ -28,10 +29,35 @@
         <div class="splash-inner">
             <h1 class="splash-title"><span>Alecto</span> is simple PSD Template</h1>
             <h3 class="splash-subtitle">Nullam aliquet nunc vitae</h3>
-            <button class="btn-1">Learn more</button>
+            <button type="button" class="btn-1">Learn more</button>
         </div>
     </header>
-<body>
-    
+    <section class="container about">
+        <h2 class="section-title">About us</h2>
+        <p>Nullam ac lectus a eros pulvinar ullamcorper. Phasellus varius elit ac suscipit pellentesque.</p>
+        <div class="row">
+            <div class="box">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <h4 class="section-subtitle">Lorem ipsum</h4>
+                <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <h4 class="section-subtitle">Lorem ipsum</h4>
+                <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <h4 class="section-subtitle">Lorem ipsum</h4>
+                <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <h4 class="section-subtitle">Lorem ipsum</h4>
+                <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
+            </div>
+        </div>
+        <button type="button" class="btn-2">Learn more</button>
+    </section>
 </body>
 </html>
