Add styles for section about

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="splash">
         <nav class="navigation">
             <h2 class="nav-title">Alecto<span>.</span></h2>
-            <div class="container">
+            <div class="nav">
                 <ul>
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
@@ -34,25 +34,25 @@
     </header>
     <section class="container about">
         <h2 class="section-title">About us</h2>
-        <p>Nullam ac lectus a eros pulvinar ullamcorper. Phasellus varius elit ac suscipit pellentesque.</p>
+        <p class="section-description">Nullam ac lectus a eros pulvinar ullamcorper. Phasellus varius elit ac suscipit pellentesque.</p>
         <div class="row">
             <div class="box">
-                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-pen-to-square"></i>
                 <h4 class="section-subtitle">Lorem ipsum</h4>
                 <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
             </div>
             <div class="box">
-                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-thumbtack"></i>
                 <h4 class="section-subtitle">Lorem ipsum</h4>
                 <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
             </div>
             <div class="box">
-                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-compass"></i>
                 <h4 class="section-subtitle">Lorem ipsum</h4>
                 <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
             </div>
             <div class="box">
-                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-calendar"></i>
                 <h4 class="section-subtitle">Lorem ipsum</h4>
                 <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
             </div>
