Add section more html

--- a/index.html
+++ b/index.html
@@ -59,5 +59,31 @@
         </div>
         <button type="button" class="btn-2">Learn more</button>
     </section>
+    <div class="grey">
+        <section class="container more">
+            <div class="row">
+                <div class="box">
+                    <img src="https://images.pexels.com/photos/249597/pexels-photo-249597.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                </div>
+                <div class="box">
+                    <h2 class="section-title">Lorem impsum</h2>
+                    <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl. Fusce sapien tellus, porttitor ut turpis sit amet, ornare finibus ipsum. Quisque luctus imperdiet pretium. Quisque luctus imperdiet pretium.</p>
+                    <button type="button" class="btn-2">Learn more</button>
+                </div>
+            </div>
+        </section>
+    </div>
+    <section class="container more">
+        <div class="row">
+            <div class="box">
+                <h2 class="section-title">Lorem impsum</h2>
+                <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl. Fusce sapien tellus, porttitor ut turpis sit amet, ornare finibus ipsum. Quisque luctus imperdiet pretium. Quisque luctus imperdiet pretium.</p>
+                <button type="button" class="btn-2">Learn more</button>
+            </div>
+            <div class="box">
+                <img src="https://images.pexels.com/photos/249597/pexels-photo-249597.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
