Add styles for more

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
     <div class="grey">
         <section class="container more">
             <div class="row">
-                <div class="box">
-                    <img src="https://images.pexels.com/photos/249597/pexels-photo-249597.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                <div class="more-image">
+                    <img src="https://i.postimg.cc/6QVfL7D0/pexels-math-249597.png">
                 </div>
                 <div class="box">
                     <h2 class="section-title">Lorem impsum</h2>
-                    <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl. Fusce sapien tellus, porttitor ut turpis sit amet, ornare finibus ipsum. Quisque luctus imperdiet pretium. Quisque luctus imperdiet pretium.</p>
+                    <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl. Fusce sapien tellus, porttitor ut turpis sit amet, ornare finibus ipsum. Quisque luctus imperdiet pretium. Quisque luctus imperdiet pretium. Nullam nec mi elit. In accumsan dui a nulla accumsan, eu posuere orci bibendum.</p>
                     <button type="button" class="btn-2">Learn more</button>
                 </div>
             </div>
@@ -77,11 +77,11 @@
         <div class="row">
             <div class="box">
                 <h2 class="section-title">Lorem impsum</h2>
-                <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl. Fusce sapien tellus, porttitor ut turpis sit amet, ornare finibus ipsum. Quisque luctus imperdiet pretium. Quisque luctus imperdiet pretium.</p>
+                <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl. Fusce sapien tellus, porttitor ut turpis sit amet, ornare finibus ipsum. Quisque luctus imperdiet pretium. Quisque luctus imperdiet pretium. Nullam nec mi elit. In accumsan dui a nulla accumsan, eu posuere orci bibendum.</p>
                 <button type="button" class="btn-2">Learn more</button>
             </div>
-            <div class="box">
-                <img src="https://images.pexels.com/photos/249597/pexels-photo-249597.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+            <div class="more-image">
+                <img src="https://i.postimg.cc/6QVfL7D0/pexels-math-249597.png">
             </div>
         </div>
     </section>
