--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
         </div>
     </section>
     <div class="quote">
-        <img class="quote-img" src="https://images.zwierciadlo.pl/_resource/res/path/a4/51/a4512475-cc48-4cac-b682-4a37b0672c2b_f750x750"
-        <p class="quote-text"><span>Alecto</span> ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <p>Harry Potter, CEO & wizard at Alecto.com</p>
+        <div class="quote-inner">
+            <img class="quote-img" src="https://images.zwierciadlo.pl/_resource/res/path/a4/51/a4512475-cc48-4cac-b682-4a37b0672c2b_f750x750">
+            <h5 class="quote-text"><span>Alecto</span> ipsum dolor sit amet, consectetur adipiscing elit.</h5>
+            <p>Harry Potter, CEO & wizard at Alecto.com</p>
+        </div>
     </div>
 </body>
 </html>
