Add section services html

--- a/index.html
+++ b/index.html
@@ -89,8 +89,52 @@
         <div class="quote-inner">
             <img class="quote-img" src="https://images.zwierciadlo.pl/_resource/res/path/a4/51/a4512475-cc48-4cac-b682-4a37b0672c2b_f750x750">
             <h5 class="quote-text"><span>Alecto</span> ipsum dolor sit amet, consectetur adipiscing elit.</h5>
-            <p>Harry Potter, CEO & wizard at Alecto.com</p>
+            <p>Harry Potter, CEO & wizard at Alecto</p>
         </div>
+    </div>
+    <div class="grey">
+        <section class="container services">
+            <h2 class="section-title">Our services</h2>
+            <p class="section-description">Nullam ac lectus a eros pulvinar ullamcorper. Phasellus varius elit ac suscipit pellentesque.</p>    
+            <div class="row">
+                <div class="box">
+                    <div class="icon">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </div>
+                    <div class="box-inner">
+                        <h2 class="section-title">Portfolio</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus magna, tincidunt ac blandit nec, gravida sit amet nulla. Maecenas scelerisque nisi lacus, eu tempus justo malesuada et.</p>                
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="icon">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </div>
+                    <div class="box-inner">
+                        <h2 class="section-title">Design</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus magna, tincidunt ac blandit nec, gravida sit amet nulla. Maecenas scelerisque nisi lacus, eu tempus justo malesuada et.</p>                
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="icon">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </div>
+                    <div class="box-inner">
+                        <h2 class="section-title">Branding</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus magna, tincidunt ac blandit nec, gravida sit amet nulla. Maecenas scelerisque nisi lacus, eu tempus justo malesuada et.</p>                
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="icon">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </div>
+                    <div class="box-inner">
+                        <h2 class="section-title">Development</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus magna, tincidunt ac blandit nec, gravida sit amet nulla. Maecenas scelerisque nisi lacus, eu tempus justo malesuada et.</p>                
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
