Add section team html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                     <li><a href="#">WORK</a></li>
                     <li><a href="#">SERVICES</a></li>
                     <li><a href="#">BLOG</a></li>
-                    <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
                 </ul>
             </div>
         </nav>
@@ -63,7 +62,7 @@
         <section class="container more">
             <div class="row">
                 <div class="more-image">
-                    <img src="https://i.postimg.cc/6QVfL7D0/pexels-math-249597.png">
+                    <img alt="abc" src="https://i.postimg.cc/6QVfL7D0/pexels-math-249597.png">
                 </div>
                 <div class="box">
                     <h2 class="section-title">Lorem impsum</h2>
@@ -81,21 +80,21 @@
                 <button type="button" class="btn-2">Learn more</button>
             </div>
             <div class="more-image">
-                <img src="https://i.postimg.cc/6QVfL7D0/pexels-math-249597.png">
+                <img alt="abc" src="https://i.postimg.cc/6QVfL7D0/pexels-math-249597.png">
             </div>
         </div>
     </section>
     <div class="quote">
         <div class="quote-inner">
-            <img class="quote-img" src="https://images.zwierciadlo.pl/_resource/res/path/a4/51/a4512475-cc48-4cac-b682-4a37b0672c2b_f750x750">
+            <img alt="abc" class="quote-img" src="https://images.zwierciadlo.pl/_resource/res/path/a4/51/a4512475-cc48-4cac-b682-4a37b0672c2b_f750x750">
             <h5 class="quote-text"><span>Alecto</span> ipsum dolor sit amet, consectetur adipiscing elit.</h5>
-            <p>Harry Potter, CEO & wizard at Alecto</p>
+            <p>Harry Potter, CEO &amp; wizard at Alecto</p>
         </div>
     </div>
     <div class="grey">
         <section class="container services">
             <h2 class="section-title">Our services</h2>
-            <p class="section-description">Nullam ac lectus a eros pulvinar ullamcorper. Phasellus varius elit ac suscipit pellentesque.</p>    
+            <p class="section-description">Nullam ac lectus a eros pulvinar ullamcorper. Phasellus varius elit ac suscipit pellentesque.</p>
             <div class="row">
                 <div class="box">
                     <div class="icon">
@@ -103,7 +102,7 @@
                     </div>
                     <div class="box-inner">
                         <h2 class="section-title">Portfolio</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus magna, tincidunt ac blandit nec, gravida sit amet nulla. Maecenas scelerisque nisi lacus, eu tempus justo malesuada et.</p>                
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus magna, tincidunt ac blandit nec, gravida sit amet nulla. Maecenas scelerisque nisi lacus, eu tempus justo malesuada et.</p>
                     </div>
                 </div>
                 <div class="box">
@@ -112,7 +111,7 @@
                     </div>
                     <div class="box-inner">
                         <h2 class="section-title">Design</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus magna, tincidunt ac blandit nec, gravida sit amet nulla. Maecenas scelerisque nisi lacus, eu tempus justo malesuada et.</p>                
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus magna, tincidunt ac blandit nec, gravida sit amet nulla. Maecenas scelerisque nisi lacus, eu tempus justo malesuada et.</p>
                     </div>
                 </div>
                 <div class="box">
@@ -121,7 +120,7 @@
                     </div>
                     <div class="box-inner">
                         <h2 class="section-title">Branding</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus magna, tincidunt ac blandit nec, gravida sit amet nulla. Maecenas scelerisque nisi lacus, eu tempus justo malesuada et.</p>                
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus magna, tincidunt ac blandit nec, gravida sit amet nulla. Maecenas scelerisque nisi lacus, eu tempus justo malesuada et.</p>
                     </div>
                 </div>
                 <div class="box">
@@ -130,11 +129,27 @@
                     </div>
                     <div class="box-inner">
                         <h2 class="section-title">Development</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus magna, tincidunt ac blandit nec, gravida sit amet nulla. Maecenas scelerisque nisi lacus, eu tempus justo malesuada et.</p>                
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus magna, tincidunt ac blandit nec, gravida sit amet nulla. Maecenas scelerisque nisi lacus, eu tempus justo malesuada et.</p>
                     </div>
                 </div>
             </div>
         </section>
     </div>
+    <section class="team">
+        <h2 class="section-title">Meet our team</h2>
+        <p class="section-description">Nullam ac lectus a eros pulvinar ullamcorper. Phasellus varius elit ac suscipit pellentesque.</p>
+        <div class="gallery">
+            <img alt="abc" class="gallery-img" src="https://images.pexels.com/photos/4927361/pexels-photo-4927361.jpeg?auto=compress&cs=tinysrgb&w=600">
+            <img alt="abc" class="gallery-img" src="https://images.pexels.com/photos/7703303/pexels-photo-7703303.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
+            <img alt="abc" class="gallery-img" src="https://images.pexels.com/photos/5273717/pexels-photo-5273717.jpeg?auto=compress&cs=tinysrgb&w=600">
+            <img alt="abc" class="gallery-img" src="https://images.pexels.com/photos/8389921/pexels-photo-8389921.jpeg?auto=compress&cs=tinysrgb&w=600">
+            <img alt="abc" class="gallery-img" src="https://images.pexels.com/photos/7703303/pexels-photo-7703303.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
+            <img alt="abc" class="gallery-img" src="https://images.pexels.com/photos/4927361/pexels-photo-4927361.jpeg?auto=compress&cs=tinysrgb&w=600">
+            <img alt="abc" class="gallery-img" src="https://images.pexels.com/photos/5273717/pexels-photo-5273717.jpeg?auto=compress&cs=tinysrgb&w=600">
+            <img alt="abc" class="gallery-img" src="https://images.pexels.com/photos/7703303/pexels-photo-7703303.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
+            <img alt="abc" class="gallery-img" src="https://images.pexels.com/photos/5273717/pexels-photo-5273717.jpeg?auto=compress&cs=tinysrgb&w=600">
+            <img alt="abc" class="gallery-img" src="https://images.pexels.com/photos/4927361/pexels-photo-4927361.jpeg?auto=compress&cs=tinysrgb&w=600">
+        </div>
+    </section>
 </body>
 </html>
