Add section pricing html

--- a/index.html
+++ b/index.html
@@ -151,5 +151,49 @@
             <img alt="abc" class="gallery-img" src="https://images.pexels.com/photos/4927361/pexels-photo-4927361.jpeg?auto=compress&cs=tinysrgb&w=600">
         </div>
     </section>
+    <div class="grey">
+        <section class="container pricing">
+            <h2 class="section-title">Pricing</h2>
+            <p class="section-description">Nullam ac lectus a eros pulvinar ullamcorper. Phasellus varius elit ac suscipit pellentesque.</p>
+            <div class="row">
+                <div class="box">
+                    <h2 class="price"><span>$</span>29</h2>
+                    <h4 class="section-subtitle">Lorem ipsum license</h4>
+                    <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
+                    <div class="purchase-button">
+                        <button type="button" class="btn-3">PURCHASE</button>
+                        <i class="fa-solid fa-thumbtack"></i>
+                    </div>
+                </div>
+                <div class="box">
+                    <h2 class="price"><span>$</span>39</h2>
+                    <h4 class="section-subtitle">Lorem ipsum license</h4>
+                    <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
+                    <div class="purchase-button">
+                        <button type="button" class="btn-3">PURCHASE</button>
+                        <i class="fa-solid fa-thumbtack"></i>
+                    </div>
+                </div>
+                <div class="box">
+                    <h2 class="price"><span>$</span>49</h2>
+                    <h4 class="section-subtitle">Lorem ipsum license</h4>
+                    <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
+                    <div class="purchase-button">
+                        <button type="button" class="btn-3">PURCHASE</button>
+                        <i class="fa-solid fa-thumbtack"></i>
+                    </div>
+                </div>
+                <div class="box">
+                    <h2 class="price"><span>$</span>109</h2>
+                    <h4 class="section-subtitle">Lorem ipsum license</h4>
+                    <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
+                    <div class="purchase-button">
+                        <button type="button" class="btn-3">PURCHASE</button>
+                        <i class="fa-solid fa-thumbtack"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
