Add styles for pricing and change html

--- a/index.html
+++ b/index.html
@@ -157,40 +157,44 @@
             <p class="section-description">Nullam ac lectus a eros pulvinar ullamcorper. Phasellus varius elit ac suscipit pellentesque.</p>
             <div class="row">
                 <div class="box">
-                    <h2 class="price"><span>$</span>29</h2>
-                    <h4 class="section-subtitle">Lorem ipsum license</h4>
-                    <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
-                    <div class="purchase-button">
-                        <button type="button" class="btn-3">PURCHASE</button>
-                        <i class="fa-solid fa-thumbtack"></i>
+                    <div class="box-price">
+                        <h2 class="section-title price">$29</h2>
+                        <h4 class="section-subtitle">Lorem ipsum license</h4>
                     </div>
+                    <div class="box-text">
+                        <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
+                    </div>
+                    <button type="button" class="btn-3">PURCHASE<i class="fa-solid fa-thumbtack"></i></button>
                 </div>
                 <div class="box">
-                    <h2 class="price"><span>$</span>39</h2>
-                    <h4 class="section-subtitle">Lorem ipsum license</h4>
-                    <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
-                    <div class="purchase-button">
-                        <button type="button" class="btn-3">PURCHASE</button>
-                        <i class="fa-solid fa-thumbtack"></i>
+                    <div class="box-price">
+                        <h2 class="section-title price">$39</h2>
+                        <h4 class="section-subtitle">Lorem ipsum license</h4>
                     </div>
+                    <div class="box-text">
+                        <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
+                    </div>
+                    <button type="button" class="btn-3">PURCHASE<i class="fa-solid fa-thumbtack"></i></button>
                 </div>
                 <div class="box">
-                    <h2 class="price"><span>$</span>49</h2>
-                    <h4 class="section-subtitle">Lorem ipsum license</h4>
-                    <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
-                    <div class="purchase-button">
-                        <button type="button" class="btn-3">PURCHASE</button>
-                        <i class="fa-solid fa-thumbtack"></i>
+                    <div class="box-price">
+                        <h2 class="section-title price">$49</h2>
+                        <h4 class="section-subtitle">Lorem ipsum license</h4>
                     </div>
+                    <div class="box-text">
+                        <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
+                    </div>
+                    <button type="button" class="btn-3">PURCHASE<i class="fa-solid fa-thumbtack"></i></button>
                 </div>
                 <div class="box">
-                    <h2 class="price"><span>$</span>109</h2>
-                    <h4 class="section-subtitle">Lorem ipsum license</h4>
-                    <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
-                    <div class="purchase-button">
-                        <button type="button" class="btn-3">PURCHASE</button>
-                        <i class="fa-solid fa-thumbtack"></i>
+                    <div class="box-price">
+                        <h2 class="section-title price">$109</h2>
+                        <h4 class="section-subtitle">Lorem ipsum license</h4>
                     </div>
+                    <div class="box-text">
+                        <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl.</p>
+                    </div>
+                    <button type="button" class="btn-3">PURCHASE<i class="fa-solid fa-thumbtack"></i></button>
                 </div>
             </div>
         </section>
