Add map html and styles

--- a/index.html
+++ b/index.html
@@ -199,5 +199,17 @@
             </div>
         </section>
     </div>
+    <section class="container map">
+        <div class="row">
+            <div class="box">
+                <h2 class="section-title">Dolor sit amet</h2>
+                <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl. Fusce sapien tellus, porttitor ut turpis sit amet, ornare finibus ipsum. Quisque luctus imperdiet pretium. Quisque luctus imperdiet pretium. Nullam nec mi elit. In accumsan dui a nulla accumsan, eu posuere orci bibendum.</p>
+                <button type="button" class="btn-2">Learn more</button>
+            </div>
+            <div class="map-image">
+                <img alt="abc" src="https://images.pexels.com/photos/14654190/pexels-photo-14654190.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
