--- a/index.html
+++ b/index.html
@@ -211,5 +211,11 @@
             </div>
         </div>
     </section>
+    <div class="try">
+        <div class="try-inner">
+            <h5 class="try-text">Try our <span>PSD template </span>on symu.co</h5>
+            <button type="button" class="btn-2">symu.co/freebies</button>
+        </div>
+    </div>
 </body>
 </html>
