Add styles for try

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
     </section>
     <div class="try">
         <div class="try-inner">
-            <h5 class="try-text">Try our <span>PSD template </span>on symu.co</h5>
-            <button type="button" class="btn-2">symu.co/freebies</button>
+            <h5 class="try-text">Try our <b>PSD template </b>on symu.co</h5>
+            <button type="button" class="btn-2 try-button">symu.co/freebies</button>
         </div>
     </div>
 </body>
