--- a/index.html
+++ b/index.html
@@ -217,5 +217,17 @@
             <button type="button" class="btn-2 try-button">symu.co/freebies</button>
         </div>
     </div>
+    <footer class="footer">
+        <h2 class="footer-title"><i class="fa-solid fa-a"></i> All rights reserved by Alecto</h2>
+        <div class="footer-nav">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
