Add more styles for buttons

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="box">
                     <h2 class="section-title">Lorem impsum</h2>
                     <p>Mauris semper blandit orci sed ultrices. Duis quis ante blandit, aliquam justo vel, dapibus nisl. Fusce sapien tellus, porttitor ut turpis sit amet, ornare finibus ipsum. Quisque luctus imperdiet pretium. Quisque luctus imperdiet pretium. Nullam nec mi elit. In accumsan dui a nulla accumsan, eu posuere orci bibendum.</p>
-                    <button type="button" class="btn-2">Learn more</button>
+                    <button type="button" class="btn-2 more-button">Learn more</button>
                 </div>
             </div>
         </section>
